@@ -90,6 +90,23 @@
   </tr>
 
   <tr>
+    <td><p align=center><img src="@IMAGES@macosx.jpeg"></td>
+    <td>
+      MacOS X/Fink
+    </td>
+    <td>
+      <tt>current</tt>
+    </td>
+    <td>
+      <b>  Go <a href="macos.html">here</a></b>
+    </td>
+    <td>2.0.1</td>  
+    <td>
+      <a href="mailto:neeracherATmacDOTcom">Matthias Neeracher</a>
+    </td> 
+  </tr>
+  
+  <tr>
   <td><p align=center><img src="@IMAGES@windows.png"></td>
   <td>MS Windows/Cygwin</td>
     <td>
