@@ -1,3 +1,8 @@
+2003-10-06  Jan Nieuwenhuizen  <janneke@gnu.org>
+
+	* site/download/index.html: 
+	* site/index.html: Add Macos X 2.0.1 package.
+
 2003-10-05  Jan Nieuwenhuizen  <janneke@gnu.org>
 
 	* site/index.html:
